syntax = "proto3";

import "google/protobuf/wrappers.proto";

package ru.store.store_thing;

// OBJECTS

enum Status {
    OK = 0;
    BAD = 1;
    ERROR = 2;
}

message Error {
  string class = 1;
  string message = 2;
}

message Thing {
  google.protobuf.Int64Value id = 1;
  google.protobuf.StringValue brand = 2;
  google.protobuf.StringValue category = 3;
  google.protobuf.StringValue size = 4;
  google.protobuf.Int64Value price = 5;
  google.protobuf.StringValue description = 6;
}

message BrandCategorySize {
  google.protobuf.Int64Value id = 1;
  google.protobuf.StringValue brandCategorySize = 2;
}

// REQUEST

message Request {
  string name = 1;
  google.protobuf.StringValue value = 2;
}

message RequestByMiddlePrice {
    int64 low = 1;
    int64 high = 2;
}

// RESPONCE

message ThingResponse {
  Status status = 1;
  Error error = 2;
  repeated Thing thing = 3;
}

message BrandCategorySizeResponse {
  Status status = 1;
  Error error = 2;
  repeated BrandCategorySize brandCategorySize = 3;
}

// SERVISE

service ThingServise {
  rpc saveThing(Thing) returns (ThingResponse);
  rpc getAllThings(Request) returns (ThingResponse);
  rpc getAllBrandCategorySizeResponse(Request) returns (BrandCategorySizeResponse);
  rpc getAllThingsByBrandCategorySize(Request) returns (ThingResponse);
  rpc getAllThingsByMiddlePrice(RequestByMiddlePrice) returns (ThingResponse);
  rpc deleteThingById(Thing) returns (ThingResponse);
}